[package]
name = "whale_radar_main"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dashmap = "5"
futures = "0.3"
lazy_static = "1.4"
reqwest = { version = "0.11", features = ["json"] }
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
warp = "0.3"
